0.2.1 2016-10-04

* cleared in documentation on two types of sparrow plugins - Swat and Outthentic

0.2.0 2016-10-04

* swat plugins get back to sparrow family!!!

* `task add` action now accept --host parameter to make it possible run swat plugins

0.1.22 2016-08-25

* generated tasks names should be unique in task box queue

0.1.21 2016-08-25

* task box - remove duplicate plugin install commands

* impove sparrow task execution output ( I love when it colours! ;)


0.1.20 2016-08-20
 
* make it again dependent on the latest version of Outthentic

0.1.19 2016-08-20

* make it again dependent on the latest version of Outthentic

0.1.19 2016-08-19

* make it again dependent on the latest version of Outthentic

0.1.18 2016-08-18

* make it again dependent on the latest version of Outthentic

0.1.17 2016-08-18

* requires latest version of Outthentic

0.1.16 2016-08-16

* a minimal changes - removes some extra new lines at sparrow output
* add quiet parameter for `box run` command
 
0.1.15 2016-08-15

* requires a latest version of Outthentic ( really the latest one )

0.1.14 2016-08-15

* requires a latest version of Outthentic

0.1.13 2016-08-12

* sparrow task boxes - a set of sparrow tasks

0.1.12 2016-07-11

* use latest version of Outthentic
* a minor documentation fix pull/4  - thanks to @olshevskiy87

0.1.11 2016-06-28

* make spi, spl, sproot locations configurable

0.1.10 2016-06-27

* correct location of spi, spl in case of running sparrow under sudo

0.1.9 2016-06-27

* verbose mode - show some message only when verbose mode is enabled
* small bug fixes


0.1.8 2016-06-16

* task/json configuration support
* made `sparrow index update` less verbose
* made `sparrow task|plg run` output a bit friendly
* require latest version of Outthentic to support JSON configurations

0.1.7 2016-05-28

* A no-changes release to require a latest version of Outthentic (0.1.5)

0.1.6 2016-05-28

* A no-changes release to require a latest version of Outthentic (0.1.4)
